codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__realtime_requests__remote_voice_picker.snap
---
source: tui/src/app/tests/realtime_requests.rs
assertion_line: 1881
expression: "crate::chatwidget::tests::helpers::render_bottom_popup(&app.chat_widget, 80)"
---
 Elpis · model gpt-5.6-sol · location /tmp/project

  Select voice
  Applies to your next voice conversation.


  1. juniper
  2. maple
  3. spruce
  4. ember
  5. vale
  6. breeze
  7. arbor
› 8. sol (current)
↓
  enter select · esc back
