codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__realtime_requests__remote_voice_picker_server_default.snap
---
source: tui/src/app/tests/realtime_requests.rs
assertion_line: 1917
expression: popup
---
 Elpis · model gpt-5.6-sol · location /tmp/project

  Select voice
  Applies to your next voice conversation.


› 1. maple (current)
  2. cove
  3. juniper

  enter select · esc back
